--- a/src/core/makefile
+++ b/src/core/makefile
@@ -1,8 +1,10 @@
-all: main
+BIN_PATH := /root/vscode/bin
 
-main: p2c.o
-	g++ -rdynamic p2c.o -o p2c -ldl
-.cpp.o:	
+all: p2c
+
+p2c: p2c.o
+	g++ -rdynamic p2c.o -o $(BIN_PATH)/p2c -ldl
+.cpp.o:
 	g++ -c $<
 
 clean:
