--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -52,7 +52,8 @@
         "ctime": "cpp",
         "ratio": "cpp",
         "iomanip": "cpp",
-        "sstream": "cpp"
+        "sstream": "cpp",
+        "map": "cpp"
     },
     "makefile.makefilePath": "/root/vscode/src/core"
 }
