--- a/src/core/makefile
+++ b/src/core/makefile
@@ -4,9 +4,10 @@ CORE_PATH := /root/vscode/src/core
 all: p2c
 
 p2c: p2c.o
-	g++ -rdynamic p2c.o -o $(BIN_PATH)/p2c -ldl
+	g++ -rdynamic $< -o $(BIN_PATH)/$@ -ldl
+	rm $<
 .cpp.o:
 	g++ -I $(CORE_PATH) -c $<
 
 clean:
-	rm *.o p2c
+	- rm *.o $(BIN_PATH)/p2c
