alerter level control liblist mem leak p2c_mod init def test mod_normal fix some bug

--- a/src/test/makefile
+++ b/src/test/makefile
@@ -4,6 +4,8 @@ SRC_FILES := $(wildcard *.cpp)
 OBJ_FILES := $(patsubst %.cpp,%.o,$(SRC_FILES))
 OUT_FILES := $(patsubst %.o,%.out,$(OBJ_FILES))
 BIN_FILES := $(patsubst %.o,%,$(OBJ_FILES))
+COLOR_GREEN := echo "\e[1;32m"
+COLOR_RESET := echo "\e[0m"
 
 all: argtable liblist 
 %.out: %.o
@@ -12,24 +14,29 @@ all: argtable liblist
 	g++ -I $(CORE_PATH) -c $<
 
 argtable: p2c_test_argtable
-	@echo "\e[1;32m"
-	./$< -arg1 hello --arg2 ppo oop
-	@echo "\e[0m"
-	make clean
+	@ $(COLOR_GREEN)
+	- ./$< -arg1 hello --arg2 ppo oop
+	@ $(COLOR_RESET)
+	@ make clean
 p2c_test_argtable: p2c_test_argtable.o
 	g++ -rdynamic -o $@ $< -ldl
 
 liblist: p2c_test_liblist
-	./$<
-	make clean
+	@ $(COLOR_GREEN)
+	- ./$<
+	@ $(COLOR_RESET)
+	@ make clean
 p2c_test_liblist: p2c_test_liblist.o
 	g++ -rdynamic -o $@ $< -ldl
 
 mod_normal: p2c_test_mod_normal
-	./$< -f debian -c /bin:/bin
+	@ $(COLOR_GREEN)
+	- ./$< -f debian -c /bin:/bin
+	@ $(COLOR_RESET)
+	@ make clean	
 p2c_test_mod_normal: p2c_test_mod_normal.o
 	g++ -rdynamic $< -o $@ -ldl
 	rm $<
 
 clean:
-	- rm $(BIN_FILES) $(OBJ_FILES)
+	-@ rm $(BIN_FILES) $(OBJ_FILES) 2>/dev/null
